--- a/src/app.html
+++ b/src/app.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
+		<title>F1 Countdown</title>
 		<meta charset="utf-8" />
+		<link rel="stylesheet" href="%sveltekit.assets%/style.css" />
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 		<meta name="viewport" content="width=device-width" />
 		%sveltekit.head%
