changes to how the circle on the timer elements is rendered. added a meta description

--- a/src/app.html
+++ b/src/app.html
@@ -3,7 +3,9 @@
 	<head>
 		<title>F1 Countdown</title>
 		<meta charset="utf-8" />
+		<meta name="description" content="Countdown to the next Formula 1 Race">
 		<link rel="stylesheet" href="%sveltekit.assets%/style.css" />
+		<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins">
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 		<meta name="viewport" content="width=device-width" />
 		%sveltekit.head%
