added some more meta tags

--- a/src/app.html
+++ b/src/app.html
@@ -2,12 +2,16 @@
 <html lang="en">
 	<head>
 		<title>F1 Countdown</title>
-		<meta charset="utf-8" />
-		<meta name="description" content="Countdown to the next Formula 1 Race">
-		<link rel="stylesheet" href="%sveltekit.assets%/style.css" />
+
+		<meta charset="UTF-8">
+		<meta name="description" content="Simple countdown to the next Formula 1 Race">
+		<meta name="robots" content="index, follow">
+		<meta name="author" content="Lasse Wolpmann">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+
+		<link rel="stylesheet" href="%sveltekit.assets%/style.css">
 		<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins">
-		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
-		<meta name="viewport" content="width=device-width" />
+		<link rel="icon" href="%sveltekit.assets%/favicon.png">
 		%sveltekit.head%
 	</head>
 	<body>
