--- a/src/app.html
+++ b/src/app.html
@@ -10,8 +10,11 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 
 		<link rel="stylesheet" href="%sveltekit.assets%/style.css">
-		<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins">
 		<link rel="icon" href="%sveltekit.assets%/favicon.png">
+
+		<link rel="preconnect" href="https://fonts.googleapis.com">
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+		<link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
 		%sveltekit.head%
 	</head>
 	<body>
