--- a/src/app.html
+++ b/src/app.html
@@ -4,8 +4,7 @@
 		<title>F1 Countdown</title>
 
 		<meta charset="UTF-8">
-		<meta name="description" content="Simple countdown to the next Formula 1 Race">
-		<meta name="robots" content="index, follow">
+		<meta name="robots" content="all">
 		<meta name="author" content="Lasse Wolpmann">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 
