several design changes

--- a/src/app.html
+++ b/src/app.html
@@ -17,6 +17,6 @@
 		%sveltekit.head%
 	</head>
 	<body>
-		<div>%sveltekit.body%</div>
+		<div class="app">%sveltekit.body%</div>
 	</body>
 </html>
