--- a/src/app.html
+++ b/src/app.html
@@ -11,6 +11,8 @@
 		<link rel="stylesheet" href="%sveltekit.assets%/style.css">
 		<link rel="icon" href="%sveltekit.assets%/favicon.png">
 
+		<script src="https://kit.fontawesome.com/d8482e34fa.js" crossorigin="anonymous"></script>
+
 		<link rel="preconnect" href="https://fonts.googleapis.com">
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 		<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
