--- a/src/app.html
+++ b/src/app.html
@@ -20,7 +20,7 @@
 
 		%sveltekit.head%
 	</head>
-	<body>
-		<div class="app">%sveltekit.body%</div>
+	<body data-sveltekit-preload-data="hover">
+		<div style="display: contents">%sveltekit.body%</div>
 	</body>
 </html>
