Eliminate render-blocking resources - moved Font Awesome script to body - used fontsource npm package for fonts

--- a/src/app.html
+++ b/src/app.html
@@ -11,16 +11,10 @@
 		<link rel="stylesheet" href="%sveltekit.assets%/style.css">
 		<link rel="icon" href="%sveltekit.assets%/favicon.png">
 
-		<script src="https://kit.fontawesome.com/d8482e34fa.js" crossorigin="anonymous"></script>
-
-		<link rel="preconnect" href="https://fonts.googleapis.com">
-		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-		<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
-		<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
-
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover">
+		<script src="https://kit.fontawesome.com/d8482e34fa.js" crossorigin="anonymous" async></script>
 		<div style="display: contents">%sveltekit.body%</div>
 	</body>
 </html>
