Analytics - added Plausible Analytics

--- a/src/app.html
+++ b/src/app.html
@@ -11,6 +11,8 @@
 		<link rel="stylesheet" href="%sveltekit.assets%/style.css">
 		<link rel="icon" href="%sveltekit.assets%/favicon.png">
 
+		<script defer data-domain="f1-countdown.com" src="https://plausible.io/js/script.js"></script>
+
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover">
