--- a/src/app.html
+++ b/src/app.html
@@ -11,12 +11,14 @@
 		<link rel="stylesheet" href="%sveltekit.assets%/style.css">
 		<link rel="icon" href="%sveltekit.assets%/favicon.png">
 
-		<script defer data-domain="f1-countdown.com" src="https://plausible.io/js/script.js"></script>
-
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<script src="https://kit.fontawesome.com/d8482e34fa.js" crossorigin="anonymous" async></script>
 		<div style="display: contents">%sveltekit.body%</div>
+
+		<!-- Cloudflare Web Analytics -->
+		<script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "1fd93cc5577e4f51aaa6d89ed1feb9cc"}'></script>
+		<!-- End Cloudflare Web Analytics -->
 	</body>
 </html>
