Analytics - added self-hosted plausible.io analytics

--- a/src/app.html
+++ b/src/app.html
@@ -15,7 +15,10 @@
 		<script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "1fd93cc5577e4f51aaa6d89ed1feb9cc"}'></script>
 		<!-- End Cloudflare Web Analytics -->
 
-		%sveltekit.head%
+        <!-- Plausible Analytics -->
+        <script defer data-domain="f1-countdown.com" src="https://plausible.lassewolpmann.work/js/script.js"></script>
+
+        %sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<script src="https://kit.fontawesome.com/d8482e34fa.js" crossorigin="anonymous" async></script>
