--- a/src/app.html
+++ b/src/app.html
@@ -13,10 +13,12 @@
 
 		<!-- Cloudflare Web Analytics -->
 		<script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "1fd93cc5577e4f51aaa6d89ed1feb9cc"}'></script>
-		<!-- End Cloudflare Web Analytics -->
 
         <!-- Plausible Analytics -->
         <script defer data-domain="f1-countdown.com" src="https://plausible.lassewolpmann.work/js/script.js"></script>
+
+        <!-- Buy me a coffee widget -->
+        <script data-name="BMC-Widget" data-cfasync="false" src="https://cdnjs.buymeacoffee.com/1.0.0/widget.prod.min.js" data-id="f1countdowncom" data-description="Support me on Buy me a coffee!" data-message="" data-color="#5F7FFF" data-position="Right" data-x_margin="18" data-y_margin="18"></script>
 
         %sveltekit.head%
 	</head>
