Changes: - created TimerElement class - simplified code for TimerElement - changed color of donation button - various other small changes

--- a/src/app.html
+++ b/src/app.html
@@ -6,7 +6,7 @@
 		<meta charset="UTF-8">
 		<meta name="robots" content="all">
 		<meta name="author" content="Lasse Wolpmann">
-		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 		<link rel="stylesheet" href="%sveltekit.assets%/style.css">
 		<link rel="icon" href="%sveltekit.assets%/favicon.png">
@@ -18,12 +18,15 @@
         <script defer data-domain="f1-countdown.com" src="https://plausible.lassewolpmann.work/js/script.js"></script>
 
         <!-- Buy me a coffee widget -->
-        <script data-name="BMC-Widget" data-cfasync="false" src="https://cdnjs.buymeacoffee.com/1.0.0/widget.prod.min.js" data-id="f1countdowncom" data-description="Support me on Buy me a coffee!" data-message="" data-color="#5F7FFF" data-position="Right" data-x_margin="18" data-y_margin="18"></script>
+        <script data-name="BMC-Widget" data-cfasync="false" src="https://cdnjs.buymeacoffee.com/1.0.0/widget.prod.min.js" data-id="f1countdowncom" data-description="Support me on Buy me a coffee!" data-message="" data-color="#444" data-position="Right" data-x_margin="10" data-y_margin="10"></script>
+
+        <!-- Font Awesome -->
+        <script src="https://kit.fontawesome.com/d8482e34fa.js" crossorigin="anonymous"></script>
 
         %sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover">
-		<script src="https://kit.fontawesome.com/d8482e34fa.js" crossorigin="anonymous" async></script>
+
 		<div style="display: contents">%sveltekit.body%</div>
 	</body>
 </html>
