--- a/src/app.html
+++ b/src/app.html
@@ -12,21 +12,20 @@
 		<link rel="icon" href="%sveltekit.assets%/favicon.png">
 
 		<!-- Cloudflare Web Analytics -->
-		<script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "1fd93cc5577e4f51aaa6d89ed1feb9cc"}'></script>
+		<script async src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "1fd93cc5577e4f51aaa6d89ed1feb9cc"}'></script>
 
         <!-- Plausible Analytics -->
-        <script defer data-domain="f1-countdown.com" src="https://plausible.lassewolpmann.work/js/script.js"></script>
+        <script async data-domain="f1-countdown.com" src="https://plausible.lassewolpmann.work/js/script.js"></script>
+
+        <!-- Font Awesome -->
+        <script async src="https://kit.fontawesome.com/d8482e34fa.js" crossorigin="anonymous"></script>
 
         <!-- Buy me a coffee widget -->
         <script data-name="BMC-Widget" data-cfasync="false" src="https://cdnjs.buymeacoffee.com/1.0.0/widget.prod.min.js" data-id="f1countdowncom" data-description="Support me on Buy me a coffee!" data-message="" data-color="#444" data-position="Right" data-x_margin="10" data-y_margin="10"></script>
 
-        <!-- Font Awesome -->
-        <script src="https://kit.fontawesome.com/d8482e34fa.js" crossorigin="anonymous"></script>
-
         %sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover">
-
 		<div style="display: contents">%sveltekit.body%</div>
 	</body>
 </html>
