Analytics scripts now using defer tag

--- a/src/app.html
+++ b/src/app.html
@@ -12,10 +12,10 @@
 		<link rel="icon" href="%sveltekit.assets%/favicon.png">
 
 		<!-- Cloudflare Web Analytics -->
-		<script async src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "1fd93cc5577e4f51aaa6d89ed1feb9cc"}'></script>
+		<script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "1fd93cc5577e4f51aaa6d89ed1feb9cc"}'></script>
 
         <!-- Plausible Analytics -->
-        <script async data-domain="f1-countdown.com" src="https://plausible.lassewolpmann.work/js/script.js"></script>
+        <script defer data-domain="f1-countdown.com" src="https://plausible.lassewolpmann.work/js/script.js"></script>
 
         <!-- Font Awesome -->
         <script async src="https://kit.fontawesome.com/d8482e34fa.js" crossorigin="anonymous"></script>
