BMC widget now using defer tag for script

--- a/src/app.html
+++ b/src/app.html
@@ -17,11 +17,11 @@
         <!-- Plausible Analytics -->
         <script defer data-domain="f1-countdown.com" src="https://plausible.lassewolpmann.work/js/script.js"></script>
 
+        <!-- Buy me a coffee widget -->
+        <script defer data-name="BMC-Widget" data-cfasync="false" src="https://cdnjs.buymeacoffee.com/1.0.0/widget.prod.min.js" data-id="f1countdowncom" data-description="Support me on Buy me a coffee!" data-message="" data-color="#444" data-position="Right" data-x_margin="10" data-y_margin="10"></script>
+
         <!-- Font Awesome -->
         <script async src="https://kit.fontawesome.com/d8482e34fa.js" crossorigin="anonymous"></script>
-
-        <!-- Buy me a coffee widget -->
-        <script data-name="BMC-Widget" data-cfasync="false" src="https://cdnjs.buymeacoffee.com/1.0.0/widget.prod.min.js" data-id="f1countdowncom" data-description="Support me on Buy me a coffee!" data-message="" data-color="#444" data-position="Right" data-x_margin="10" data-y_margin="10"></script>
 
         %sveltekit.head%
 	</head>
