added Google Site verification meta tag

--- a/src/app.html
+++ b/src/app.html
@@ -7,6 +7,7 @@
 		<meta name="robots" content="all">
 		<meta name="author" content="Lasse Wolpmann">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="google-site-verification" content="YrRfy5fzQU9141fJYxjllmdRliQm1DpY4jzNcsPXvME" />
 
 		<link rel="stylesheet" href="%sveltekit.assets%/style.css">
 		<link rel="icon" href="%sveltekit.assets%/favicon.png">
