--- a/src/app.html
+++ b/src/app.html
@@ -24,6 +24,10 @@
         <!-- Font Awesome -->
         <script async src="https://kit.fontawesome.com/d8482e34fa.js" crossorigin="anonymous"></script>
 
+        <!-- Google AdSense -->
+        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2221242285538421"
+                crossorigin="anonymous"></script>
+
         %sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover">
